# Zadanie-rekrutacjnie-Gra

./: CMakeLists.txt  README.md
inc/: akcja.hpp  jednostka.hpp  mapa.hpp  status.hpp
pliki/: rozkazy.txt  status.txt
scr/: Gracz1.cpp  jednostka.cpp  main.cpp  mapa.cpp  status.cpp
